Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60049

Accept-Encoding does not indicate Brotli support

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.9.0 Beta 2
    • 5.9.0 Beta 1
    • WebEngine
    • None
    • Archlinux

      When loading https://httpbin.org/brotli with simplebrowser, it shows "Accept-Encoding": "gzip, deflate", indicating that there's no support for brotli encoding.

      Chromium 57 sends "Accept-Encoding": "gzip, deflate, sdch, br", and according to caniuse this should be the case since 55.

      FWIW, I found this in src/3rdparty/chromium/content/public/common/content_features.cc:

      // Enables brotli "Accept-Encoding" advertising and "Content-Encoding" support.
      // Brotli format specification: http://www.ietf.org/id/draft-alakuijala-brotli
      const base::Feature kBrotliEncoding{"brotli-encoding",
                                          base::FEATURE_ENABLED_BY_DEFAULT};
      

        For Gerrit Dashboard: QTBUG-60049
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            the compiler Florian Bruhin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes