Enable brotli

Enable brotli if enabled in content features (which it is by default).

Task-number: QTBUG-60049
Change-Id: I67ee51be47de4df0960e378f74c323ef30a7b25a
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>